tests/snapshots/examples_fixtures/aoc__2025__aoc_day5_part2.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/aoc/2025/aoc_day5_part2.flx
== compile ==
failed (compile)
== diagnostics ==
error[E004]: Undefined Variable

I can't find a value named `push`.

  examples/aoc/2025/aoc_day5_part2.flx:33:9
   |
33 |         push(push([||], lo), hi)
   |         ^^^^

Hint:
  Define it first: let push = ...;


error[E004]: Undefined Variable

I can't find a value named `push`.

  examples/aoc/2025/aoc_day5_part2.flx:45:9
   |
45 |         push(push([||], a), b)
   |         ^^^^

Hint:
  Define it first: let push = ...;


error[E004]: Undefined Variable

I can't find a value named `push`.

  examples/aoc/2025/aoc_day5_part2.flx:62:9
   |
62 |         push(acc, r)
   |         ^^^^

Hint:
  Define it first: let push = ...;


error[E004]: Undefined Variable

I can't find a value named `slice`.

  examples/aoc/2025/aoc_day5_part2.flx:112:41
    |
112 | let range_lines = [trim(line) | line <- slice(lines, 0, sep), trim(line) != ""]
    |                                         ^^^^^

Hint:
  Define it first: let slice = ...;

Found 4 errors.
== stdout ==
<not executed>
